feat: add wallet routes
added some features:

create wallet
deposit
withdraw
view wallet by user id
add a model called balance request to validade amount logic

test the transations route, its working too
